--- a/s04/style.css
+++ b/s04/style.css
@@ -34,3 +34,42 @@ span {
     padding: 20px;
     display: block;
 }
+
+
+/* 
+Display properties
+-syntax: display: property;
+    - block: it lets the elements move it the next line, please see span as an example.
+
+    - inline: stays in horizontal direction
+
+    - inline-block
+*/
+.container {
+    background-color: lightgreen;
+    margin: 20px;
+    margin-top: 40px;
+    border: 10px solid purple;
+    padding: 20px;
+}
+
+h1 {
+    display: inline;
+    margin: 15px;
+    background-color: lightsalmon;
+    padding: 15px;
+    border: 10px dashed gray;
+}
+
+.third {
+    margin-top: 40px;
+}
+
+a {
+    background-color: white;
+    color: blue;
+    padding: 10px 10px;
+    border: 1px solid black;
+
+    display: inline-block;
+}
